# zxsj-drop-filter

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  NOTICE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-19-heroui-ui-redesign.md  2026-07-19-reference-fidelity-pass.md  2026-07-19-zxsj-drop-filter-implementation.md  2026-07-20-auto-release-updater.md  2026-07-20-compact-theme-menu.md  2026-07-21-hit-item-column-filters.md  2026-07-21-inventory-scan-modal-compact-layout.md  2026-07-21-semi-automatic-inventory-scan.md
scripts/release/: gitee-api.mjs  gitee-api.test.mjs  prepare-artifacts.mjs  publish-gitee-release.mjs  release-utils.mjs  release-utils.test.mjs  validate-release.mjs  workflows.test.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  tiangong_capture.rs  tiangong_inventory.rs  tiangong_ocr.rs  tiangong_scan.rs
src-tauri/tests/: inventory_domain.rs
src/components/app/: app-shell.tsx  (+10 more)
src/data/: default-data.ts  demo-data.test.ts  demo-data.ts
src/domain/: attributes.ts  matching.test.ts  matching.ts  normalize.test.ts  normalize.ts  recommendations.test.ts  recommendations.ts  serialization.test.ts  serialization.ts  types.ts
src/store/: app-mode-store.test.ts  app-mode-store.ts  app-store.ts
src/test/: setup.ts
src/theme/: theme-context.ts  theme-provider.tsx  theme.test.ts  theme.ts
src/updater/: update-ready-dialog.test.tsx  update-ready-dialog.tsx  update-status-control.test.tsx  update-status-control.tsx  updater-client.test.ts  updater-client.ts  use-app-updater.test.tsx  use-app-updater.ts
(+40 files in other folders)
