[package]
name = "zxsj-drop-filter"
version = "0.5.0"
description = "诛仙高手工具箱"
authors = ["stickerwu"]
license = "MIT"
repository = "https://github.com/stickerwu/zxsj-drop-filter"
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "=2.3.2"
windows-capture = "=1.5.0"
windows = { version = "=0.61.3", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Diagnostics_Debug",
] }
paddleocr_rs_onnx = "=0.2.7"
image = "=0.25.8"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
